# Celerique

./: CMakeLists.txt  README.md
cmake/: language.cmake  projects.cmake
core/: CMakeLists.txt  README.md
core/include/: README.md
core/include/celerique/internal/: engine.h
core/src/: abstracts.cpp  engine.cpp  events.cpp  graphics.cpp  logging.cpp  pipeline.cpp
core/src/events/: cursor.cpp  engine.cpp  keyboard.cpp  mouse.cpp  window.cpp
core/tests/: abstracts.gtest.cpp  engine.gtest.cpp  events.gtest.cpp  graphics.gtest.cpp  header.cmocka.c  header.gtest.cpp  logging.cmocka.c  logging.gtest.cpp  math.gtest.cpp  pipeline.gtest.cpp  types.cmocka.c
include/: celerique.h
include/celerique/: abstracts.h  defines.h  events.h  graphics.h  logging.h  math.h  pipeline.h  types.h
include/celerique/encoding/: keyboard.h
include/celerique/events/: cursor.h  engine.h  keyboard.h  mouse.h  window.h
include/celerique/vulkan/: api.h  graphics.h
include/celerique/win32/: window.h
include/celerique/x11/: window.h
vulkan/: .gitignore  CMakeLists.txt  README.md
vulkan/include/: README.md
vulkan/include/celerique/vulkan/internal/: graphics.h  manager.h  resources.h
vulkan/src/: graphics.cpp  manager.cpp  resources.cpp
vulkan/tests/: api.gtest.cpp  cube.cpp  cube.frag  cube.vert  manager.gtest.cpp  triangle.cpp  triangle.frag  triangle.vert
win32/: CMakeLists.txt  README.md
win32/include/: README.md
win32/include/celerique/win32/internal/: window.h
win32/src/: window.cpp
win32/tests/: window.cpp
x11/: CMakeLists.txt  README.md
x11/include/: README.md
x11/include/celerique/x11/internal/: window.h
x11/src/: window.cpp
x11/tests/: window.cpp
